Change height to 100vh to prevent premature scrollbar

--- a/web/app/css/sidebar.css
+++ b/web/app/css/sidebar.css
@@ -4,7 +4,7 @@
   padding: 0px 0px 0px 20%;
   background-color: #091B39;
   color: white;
-  min-height: 200vh;
+  min-height: 100vh;
   background-image: url(./../img/sidebar-bg.png);
   background-repeat: no-repeat;
   background-size: 100% 50vh;
